jellyfin/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: media
              mountPath: /Anime
            - name: config
              mountPath: /config
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-pvc
        - name: config
          emptyDir: {}
