jellyfin/51-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-proxy
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin-proxy
  template:
    metadata:
      labels:
        app: jellyfin-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: config
          configMap:
            name: jellyfin-proxy-config
