jellyfin/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    app: jellyfin-proxy
  ports:
    - name: http-jellyfin
      port: 8096
      targetPort: 80
