jellyfin/20-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  namespace: jellyfin
subsets:
  - addresses:
      - ip: 100.90.119.128 # Your NAS IP
    ports:
      - port: 8096
