jellyfin/11-service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: jellyfin-external
  namespace: jellyfin
spec:
  hosts:
    - jellyfin.jellyfin.svc.cluster.local
  addresses:
    - 100.90.119.128
  ports:
    - number: 8096
      name: http
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
    - address: 100.90.119.128
